// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toEndWith fails when string ends with given suffix 1`] = `
"<dim>expect(</><red>received</><dim>).not.toEndWith(</><green>expected</><dim>)</>

Expected string to not end with:
  <green>\\"world\\"</>
Received:
  <red>\\"hello world\\"</>"
`;

exports[`.toEndWith fails when string does not end with the given suffix 1`] = `
"<dim>expect(</><red>received</><dim>).toEndWith(</><green>expected</><dim>)</>

Expected string to end with:
  <green>\\"hello\\"</>
Received:
  <red>\\"hello world\\"</>"
`;

exports[`.toEndWith fails when the string is shorter than the given suffix 1`] = `
"<dim>expect(</><red>received</><dim>).toEndWith(</><green>expected</><dim>)</>

Expected string to end with:
  <green>\\"hello world\\"</>
Received:
  <red>\\"hello\\"</>"
`;
